--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body
 {
     text-align: center;
-    font-family: var(--font-one);
+    
 }
 label
 {
@@ -21,6 +21,7 @@ h1
     margin:auto;
     margin-top: 3rem;
     text-align: center;
+    font-family: var(--font-one);
 }
 #main 
 { 
@@ -54,4 +55,33 @@ input
 {
     background-color: black;
     color: white;
+}
+.footer
+{
+  margin-top: 7rem;
+  justify-content: center;
+}
+.copyright
+{
+    font-family: var(--font-two);
+}
+.footer .social
+{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.footer .social a{
+    font-size: 24px;
+    color: inherit;
+    margin-bottom: 0.5rem;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 0.8px;
+    opacity: 0.90;
+}
+.footer .social a:hover{
+    background-color:blanchedalmond;
 }
