--- a/style.css
+++ b/style.css
@@ -56,4 +56,32 @@ input
     background-color: black;
     color: white;
 }
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+.footer
+{
+  margin-top: 7rem;
+  justify-content: center;
+}
+.copyright
+{
+    font-family: var(--font-two);
+}
+.footer .social
+{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.footer .social a{
+    font-size: 24px;
+    color: inherit;
+    margin-bottom: 0.5rem;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 0.8px;
+    opacity: 0.90;
+}
+.footer .social a:hover{
+    background-color:blanchedalmond;
+}
