--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ label
  padding-bottom: 1rem;
  color: brown;
 }
+#output-box
+{
+    margin-top: 2rem;
+  color: maroon;
+  padding:2rem;
+}
 h1 
 {
     margin:auto;
@@ -30,7 +36,7 @@ h1
     width: 50%;
     padding: 4rem;
     font-family: var(--font-two);
-    background-color: blanchedalmond;
+    background-color: rgb(230, 159, 159);
 }
 input
 {
@@ -83,5 +89,5 @@ input
     opacity: 0.90;
 }
 .footer .social a:hover{
-    background-color:blanchedalmond;
+    background-color:white;
 }
